--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "main": "preloader.css",
     "ignore": [
         "**/.*",
-        "index.html"
+        "index.html",
+        "README.md"
     ]
 }
